Make sure whitespace is preserved

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -116,6 +116,7 @@ code,
 kbd,
 samp {
   font-family: monospace, sans-serif;
+  white-space: pre;
 }
 
 html {
